# dsp_tool

./: MARKERS  QUESTIONS.md  README.md  TODO_BACKLOG  controller.c  controller.h  controller_fir.c  controller_fir.h  controller_timeshift.c  controller_timeshift.h  controller_transform.c  controller_transform.h  gui_tweaks.c  gui_tweaks.h  main.c  meson.build  threadbox.c  threadbox.h  view.xml  view_fir.xml  view_old.xml  view_timeshift.xml  view_transform.xml
gnuplot_scripts/: script_histogram.plt  script_plot.plt  script_plot_A.plt  script_plot_B.plt
model/: #transform.h#  __gcall.h  aggregator.c  aggregator.h  combiner.c  combiner.h  complex.h  converter.h  fir.c  fir.h  generator.c  generator.h  gnuplot.c  gnuplot.h  signal.c  signal.h  signal_fio.c  signal_fio.h  transform.c  transform.h
model/converters/: adc.c  adc.h  dac.c  dac.h
model/measures/: similarity.c  similarity.h
tests/: meson.build  transform_tests.c
tests/src/: transform_tests.cpp
